--- a/crisis-intervention-angular-proj/src/app/contact/contact.component.html
+++ b/crisis-intervention-angular-proj/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-6 col-sm-12 col-md-12 padding0 subSection addressMapContainer">
             <div class="addressMapSubContainer">
                 <span class="subHeading">
-                    St Ann’s Sneha Bhavan
+                    St Ann’s Sneha Bhawan Women's Shelter Home
                 </span>
                 <h1 class="mainHeading">
                     CRISIS INTERVENTION CENTRE FOR WOMEN AT RISK
