--- a/crisis-intervention-angular-proj/src/app/home/home.component.html
+++ b/crisis-intervention-angular-proj/src/app/home/home.component.html
@@ -3,10 +3,10 @@
         <div class="col-lg-6 col-sm-12 col-md-12 subSection titleSection darkBg">
             <div class="col-12 titleSectionDiv">
                 <span class="subHeading">
-                    St Ann’s Sneha Bhavan
+                    {{title}}
                 </span>
                 <h1 class="mainHeading">
-                    CRISIS INTERVENTION CENTRE FOR WOMEN AT RISK
+                    {{heading}}
                 </h1>
             </div>
         </div>
@@ -46,7 +46,7 @@
                     Offers a helping hand to the women in crisis
                 </h3>
                 <p class="subText">
-                    St. Ann's Sneha Bhavan renders its helping hand to the women in crisis, who need support,
+                    St. Ann's Sneha Bhawan Women's Shelter Home renders its helping hand to the women in crisis, who need support,
                     understanding, safety and security.
                     Life is precious and it is to be valued, cared, protected, dignified and up held.
                 </p>
