--- a/crisis-intervention-angular-proj/src/app/other-activities/other-activities.component.html
+++ b/crisis-intervention-angular-proj/src/app/other-activities/other-activities.component.html
@@ -20,8 +20,30 @@
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 subSection">
             <div class="imageContainer padding0">
-                <img class="mainImg" src="../../assets/images/display-images/16.jpg">
+                <ngb-carousel>
+                    <ng-template ngbSlide>
+                        <div class="picsum-img-wrapper">
+                            <img class="mainImg" src="../../assets/images/display-images/16.jpg">
+                        </div>
+                    </ng-template>
+                    <ng-template ngbSlide>
+                        <div class="picsum-img-wrapper">
+                            <img class="mainImg" src="../../assets/images/display-images/26.jpg">
+                        </div>
+                    </ng-template>
+                    <ng-template ngbSlide>
+                        <div class="picsum-img-wrapper">
+                            <img class="mainImg" src="../../assets/images/display-images/27.jpg">
+                        </div>
+                    </ng-template>
+                    <ng-template ngbSlide>
+                        <div class="picsum-img-wrapper">
+                            <img class="mainImg" src="../../assets/images/display-images/32.jpg">
+                        </div>
+                    </ng-template>
+                </ngb-carousel>
             </div>
+
         </div>
     </div>
 
