--- a/crisis-intervention-angular-proj/src/app/home/home.component.html
+++ b/crisis-intervention-angular-proj/src/app/home/home.component.html
@@ -69,6 +69,7 @@
                         <li>Medical care</li>
                         <li>Ensure the Rights of Women in distress</li>
                         <li>Skill training</li>
+                        <li>Upliftment of women through Self-help Groups</li>
                         <li>Networking with other like-minded organizations</li>
                         <li>Legal help</li>
                         <li>Rehabilitation</li>
