--- a/crisis-intervention-angular-proj/src/app/other-activities/other-activities.component.html
+++ b/crisis-intervention-angular-proj/src/app/other-activities/other-activities.component.html
@@ -11,6 +11,10 @@
                         <li>Village Development Projects</li>
                         <li>Promoting Organic Farming</li>
                         <li>Medical Camps</li>
+                        <li>Women Shelter Home</li>
+                        <li>Old Age Homes</li>
+                        <li>HIV/AIDS Centre</li>
+                        <li>Boarding School for Poor Children</li>
                         <li>Skill Training</li>
                         <li>Charitable Activities</li>
                         <li>Disaster Management</li>
