--- a/docs/styles.css
+++ b/docs/styles.css
@@ -52,7 +52,7 @@ body {
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: #000 !important;
+  color: #ffffff !important;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
@@ -108,6 +108,7 @@ a:hover {
 
 .section .subSection .titleSectionDiv .subHeading {
   font-size: 18px;
+  letter-spacing: 1px;
   word-break: break-word;
 }
 
