--- a/crisis-intervention-angular-proj/src/app/home/home.component.html
+++ b/crisis-intervention-angular-proj/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 subSection">
             <div class="imageContainer">
-                <img class="mainImg" src="../../assets/images/display-images/20.jpg">
+                <img class="mainImg" src="../../assets/images/display-images/41.jpg">
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@
                     Offers a helping hand to the women in crisis
                 </h3>
                 <p class="subText">
-                    St. Ann's Sneha Bhawan Women's Shelter Home renders its helping hand to the women in crisis, who need support,
+                    St. Ann's Sneha Bhavan Women's Shelter Home renders its helping hand to the women in crisis, who need support,
                     understanding, safety and security.
                     Life is precious and it is to be valued, cared, protected, dignified and up held.
                 </p>
@@ -80,7 +80,7 @@
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 subSection">
             <div class="imageContainer">
-                <img class="mainImg" src="../../assets/images/display-images/22.jpg">
+                <img class="mainImg" src="../../assets/images/display-images/42.jpg">
             </div>
         </div>
     </div>
@@ -153,11 +153,30 @@
                 </div>
                 <br />
                 <div class="subText">
-                    Our Work is like a Drop in the Ocean. But if the drop were not there the Ocean would be Missing.
+                    We run Social Welfare and Developmental Programs like
+                    <ul>
+                        <li>Village Development</li>
+                        <li>Promote Organic Farming </li>
+                        <li>Upliftment of Women through Self-help Groups</li>
+                        <li>Women Shelter Homes</li>
+                        <li>Old Age Homes</li>
+                        <li>HIV/AIDS centre</li>
+                        <li>Boarding for poor children</li>
+                    </ul>
                 </div>
-                <br />
-                <div class="subText">
-                    Lets Dream together, ACt together and Make Someones Life Better.
+            </div>
+        </div>
+    </div>
+
+    <hr class="hrLine"/>
+
+    <div class="row col-12 section">
+        <div class="col-lg-12 col-sm-12 col-md-12 subSection invitationSection">
+            <div class="col-12 invitationSubSection">
+                <div class="subText textAlignCenter">
+                    Our Work is like a Drop in the Ocean. But if the drop were not there the Ocean would be Missing.
+                    <br />
+                    Lets Dream together, Act together and Make Someones Life Better.
                 </div>
             </div>
         </div>
@@ -168,7 +187,7 @@
     <div class="row socialSites">
         <a><img src="../../assets/images/facebook.png"> </a>
         <a><img src="../../assets/images/instagram.png"> </a>
-        <a><img src="../../assets/images/gmail.png"> </a>
+        <a href="mailto:stannsmaha@gmail.com"><img src="../../assets/images/gmail.png"></a>
         <a><img src="../../assets/images/linkedin.png"> </a>
     </div>
     <div class="row copyrightText"><i class="far fa-copyright"></i> A Unit of St.Ann’s Society, Maharashtra Trust Reg.No.253, Ahmednagar</div>    
