--- a/crisis-intervention-angular-proj/src/app/contact/contact.component.html
+++ b/crisis-intervention-angular-proj/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-6 col-sm-12 col-md-12 padding0 subSection addressMapContainer">
             <div class="addressMapSubContainer">
                 <span class="subHeading">
-                    St Ann’s Sneha Bhawan Women's Shelter Home
+                    St Ann’s Sneha Bhavan Women's Shelter Home
                 </span>
                 <h1 class="mainHeading">
                     CRISIS INTERVENTION CENTRE FOR WOMEN AT RISK
@@ -36,7 +36,7 @@
             <div class="row socialSites">
                 <a><img src="../../assets/images/facebook.png"> </a>
                 <a><img src="../../assets/images/instagram.png"> </a>
-                <a><img src="../../assets/images/gmail.png"> </a>
+                <a href="mailto:stannsmaha@gmail.com"><img src="../../assets/images/gmail.png"></a>
                 <a><img src="../../assets/images/linkedin.png"> </a>
             </div>
             <div class="row copyrightText"><i class="far fa-copyright"></i> A Unit of St.Ann’s Society, Maharashtra Trust Reg.No.253, Ahmednagar</div>    
