--- a/crisis-intervention-angular-proj/src/app/other-activities/other-activities.component.html
+++ b/crisis-intervention-angular-proj/src/app/other-activities/other-activities.component.html
@@ -79,7 +79,7 @@
     <div class="row socialSites">
         <a><img src="../../assets/images/facebook.png"> </a>
         <a><img src="../../assets/images/instagram.png"> </a>
-        <a><img src="../../assets/images/gmail.png"> </a>
+        <a href="mailto:stannsmaha@gmail.com"><img src="../../assets/images/gmail.png"></a>
         <a><img src="../../assets/images/linkedin.png"> </a>
     </div>
     <div class="row copyrightText"><i class="far fa-copyright"></i> A Unit of St.Ann’s Society, Maharashtra Trust Reg.No.253, Ahmednagar</div>    
