--- a/crisis-intervention-angular-proj/src/styles.scss
+++ b/crisis-intervention-angular-proj/src/styles.scss
@@ -147,6 +147,7 @@ a {
         .mainImg {
             width: 100%;
             max-height: 480px;
+            min-height: 355px;
         }
 
         .multipleImages {
