--- a/docs/styles.css
+++ b/docs/styles.css
@@ -146,6 +146,7 @@ a:hover {
 .section .imageContainer .mainImg {
   width: 100%;
   max-height: 480px;
+  min-height: 355px;
 }
 
 .section .imageContainer .multipleImages {
